--- a/net.css
+++ b/net.css
@@ -5,7 +5,7 @@ body{
 .head{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images2/backimage2.jpeg);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(backimage2.jpeg);
     background-size: cover;
     background-position:0cqmin;
     
